--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -4,18 +4,21 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".StarWarsApplication"
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:fullBackupContent="false"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.StarWars">
-        <activity android:name=".features.MainActivity">
+        <activity android:name=".features.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".features.MainActivity"
+            android:launchMode="singleTop"/>
     </application>
 </manifest>
